# traditional-ml-training-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
trad_ml_example/: Dockerfile  docker-compose.yml
trad_ml_example/xgboost_regression/: Dockerfile  README.md  config.yaml  docker-compose.yml  generate_data.py  requirements.txt  train_xgboost.py
trad_ml_example/xgboost_regression/temp_data/: housing_data.csv
trad_ml_training_kit/: __init__.py  pyproject.toml  setup.py
trad_ml_training_kit/core/: callbacks.py  config.py  data.py  data_handler.py  logging.py  loss.py  models.py  preprocessing.py  training.py  utils.py  visualization.py
